--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" type="text/css" href="src/styles/main.css">
   </head>
   <body>
-    <h1>MHR Mod Manager</h1>
+    <h1 class="text-center">MHR Mod Manager</h1>
     <div id="modlist">
       <template id="template-modentry">
         <div class="modentry">
+          <em class="modentry-mainicon" data-feather="check-square"></em>
           <div class="modentry-name"><span class="value">Name</span></div>
           <div class="modentry-description"><span class="value">Description</span></div>
           <div class="modentry-author">
@@ -21,13 +22,13 @@
           <div class="modentry-version">
             <span class="value">Version</span>
           </div>
-          <div class="modentry-childred"></div>
+          <div class="modentry-childred hidden"></div>
         </div>
       </template>
       <template id="template-modentry-child">
         <p class="modentry-child-name"><span class="value">Name</span></p>
       </template>
     </div>
-    <pre></pre>
+    <script src="node_modules/feather-icons/dist/feather.min.js"></script>
   </body>
 </html>
