remember enabled status of mods

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id="modlist">
       <template id="template-modentry">
         <div class="modentry">
-          <em class="modentry-mainicon" data-feather="check-square"></em>
+          <div class="modentry-mainicon clickable">
+            <em class="icon" data-feather="check-square"></em>
+          </div>
           <div class="modentry-name"><span class="value">Name</span></div>
           <div class="modentry-description"><span class="value">Description</span></div>
           <div class="modentry-author">
