--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div id="modlist">
       <template id="template-modentry">
         <div class="modentry">
-          <div class="modentry-mainicon clickable">
+          <a class="modentry-mainicon clickable">
             <em class="icon" data-feather="check-square"></em>
-          </div>
+          </a>
           <div class="modentry-name"><span class="value">Name</span></div>
           <div class="modentry-description"><span class="value">Description</span></div>
           <div class="modentry-author">
@@ -24,11 +24,19 @@
           <div class="modentry-version">
             <span class="value">Version</span>
           </div>
-          <div class="modentry-childred hidden"></div>
+          <div class="modentry-children hidden">
+            <hr />
+            <div class="value"></div>
+          </div>
         </div>
       </template>
       <template id="template-modentry-child">
-        <p class="modentry-child-name"><span class="value">Name</span></p>
+        <div class="modentry-child">
+          <a class="modentry-child-icon clickable">
+            <em class="icon" data-feather="check-square"></em>
+          </a>
+          <span class="modentry-child-name"><span class="value">Name</span></span>
+        </div>
       </template>
     </div>
     <script src="node_modules/feather-icons/dist/feather.min.js"></script>
