unpack archives to read image from mod

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           <div class="modentry-version">
             <span class="value">Version</span>
           </div>
+          <div class="modentry-image">
+            <img class="value" alt="" src="" />
+          </div>
           <div class="modentry-children hidden">
             <hr />
             <div class="value"></div>
